--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,9 +7,11 @@
 
 - link:
     # Shells
+    ~/.profile:
     ~/.bashrc:
     ~/.zshrc: zsh/zshrc
     ~/.oh-my-zsh: zsh/ohmyzsh
+    ~/.oh-my-zsh/custom/themes/powerlevel10k: zsh/powerlevel10k
     ~/.p10k.zsh: zsh/p10k.zsh
 
     # Tmux
@@ -18,6 +20,7 @@
 
     # Vim
     ~/.config/nvim: nvim/NvChad
+    ~/.config/nvim/lua/custom: nvim/custom
 
     # Tools
     ~/.config/k9s: k9s
