--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "zsh/powerlevel10k"]
 	path = zsh/powerlevel10k
 	url = https://github.com/romkatv/powerlevel10k.git
+[submodule "dotbot-plugins/dotbot-asdf"]
+	path = dotbot-plugins/dotbot-asdf
+	url = https://github.com/sobolevn/dotbot-asdf.git
+[submodule "asdf"]
+	path = asdf
+	url = https://github.com/asdf-vm/asdf.git
