--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,7 +3,7 @@
       relink: true
       create: true
 
-- clean: ['~']
+- clean: ["~"]
 
 - link:
     # Shells
@@ -27,32 +27,42 @@
     ~/.asdf:
 
 - asdf:
-  - plugin: kubectl
-    url: https://github.com/asdf-community/asdf-kubectl.git
-    global: 1.27.4
-    versions:
-      - 1.27.4
-  - plugin: nodejs
-    url: https://github.com/asdf-vm/asdf-nodejs
-    global: 18.17.0
-    versions:
-      - 18.17.0
-      - latest
-  - plugin: golang
-    url: https://github.com/kennyp/asdf-golang
-    global: 1.20.7
-    versions:
-      - 1.20.7
-  - plugin: k9s
-    url: https://github.com/looztra/asdf-k9s.git
-    global: 0.27.4
-    versions: 
-      - 0.27.4
-  - plugin: neovim
-    url: https://github.com/richin13/asdf-neovim.git
-    global: stable
-    versions:
-      - stable
+    - plugin: kubectl
+      url: https://github.com/asdf-community/asdf-kubectl.git
+      global: 1.27.4
+      versions:
+        - 1.27.4
+    - plugin: nodejs
+      url: https://github.com/asdf-vm/asdf-nodejs
+      global: 18.17.0
+      versions:
+        - 18.17.0
+        - latest
+    - plugin: golang
+      url: https://github.com/kennyp/asdf-golang
+      global: 1.20.7
+      versions:
+        - 1.20.7
+    - plugin: k9s
+      url: https://github.com/looztra/asdf-k9s.git
+      global: 0.27.4
+      versions:
+        - 0.27.4
+    - plugin: neovim
+      url: https://github.com/richin13/asdf-neovim.git
+      global: stable
+      versions:
+        - stable
+    - plugin: sops
+      url: https://github.com/feniix/asdf-sops.git
+      global: 3.8.1
+      versions:
+        - 3.8.1
+    - plugin: just
+      url: https://github.com/olofvndrhr/asdf-just.git
+      global: 1.16.0
+      versions:
+        - 1.16.0
 
 - shell:
     - command: git submodule sync --recursive
