--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -53,6 +53,11 @@
       global: stable
       versions:
         - stable
+    - plugin: lazydocker
+      url: https://github.com/comdotlinux/asdf-lazydocker.git
+      global: 0.23.1
+      versions:
+        - 0.23.1
     - plugin: sops
       url: https://github.com/feniix/asdf-sops.git
       global: 3.8.1
