--- a/k9s/config.yml
+++ b/k9s/config.yml
@@ -17,36 +17,17 @@ k9s:
     textWrap: false
     showTime: false
   currentContext: k3s-lab
-  currentCluster: ""
+  currentCluster: default
   clusters:
-    "":
+    default:
       namespace:
-        active: default
+        active: all
         lockFavorites: false
         favorites:
+        - all
         - default
       view:
-        active: po
-      featureGates:
-        nodeShell: false
-      shellPod:
-        image: busybox:1.35.0
-        command: []
-        args: []
-        namespace: default
-        limits:
-          cpu: 100m
-          memory: 100Mi
-        labels: {}
-      portForwardAddress: localhost
-    minikube:
-      namespace:
-        active: default
-        lockFavorites: false
-        favorites:
-        - default
-      view:
-        active: context
+        active: pod
       featureGates:
         nodeShell: false
       shellPod:
