--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,6 +10,7 @@
     ~/.profile:
     ~/.bashrc:
     ~/.zshrc: zsh/zshrc
+    ~/.zshrc.local: local/macos-zshrc
     ~/.oh-my-zsh: zsh/ohmyzsh
     ~/.oh-my-zsh/custom/themes/powerlevel10k: zsh/powerlevel10k
     ~/.p10k.zsh: zsh/p10k.zsh
@@ -47,9 +48,9 @@
         - latest
     - plugin: golang
       url: https://github.com/kennyp/asdf-golang
-      global: 1.20.7
+      global: 1.22.2
       versions:
-        - 1.20.7
+        - 1.22.2
     - plugin: k9s
       url: https://github.com/looztra/asdf-k9s.git
       global: latest
@@ -60,6 +61,11 @@
       global: stable
       versions:
         - stable
+    - plugin: cue
+      url: https://github.com/asdf-community/asdf-cue.git
+      global: latest
+      versions:
+        - latest
     - plugin: lazydocker
       url: https://github.com/comdotlinux/asdf-lazydocker.git
       global: latest
@@ -87,6 +93,11 @@
         - latest
     - plugin: terraform
       url: https://github.com/asdf-community/asdf-hashicorp.git
+      global: latest
+      versions:
+        - latest
+    - plugin: protoc
+      url: https://github.com/paxosglobal/asdf-protoc.git
       global: latest
       versions:
         - latest
