--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,3 +1,4 @@
+[general]
 import = ["~/.config/alacritty/themes/deep_space.toml"]
 
 [env]
@@ -5,10 +6,11 @@ TERM = "xterm-256color"
 
 [window]
 padding = { x = 2, y = 2 }
+option_as_alt = "Both"
 
 [scrolling]
 history = 100000
 
 [font]
-normal = { family = "MesloLGS NF", style = "regular" }
-size = 7
+normal = { family = "MesloLGS NF", style = "Regular" }
+size = 14
