Add oil to nvim

--- a/k9s/config.yml
+++ b/k9s/config.yml
@@ -24,6 +24,7 @@ k9s:
         active: all
         lockFavorites: false
         favorites:
+        - apps
         - all
         - default
       view:
