--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,8 +6,8 @@
 - clean: ["~"]
 
 - create:
-  - ~/bin
-  - ~/.asdf
+    - ~/bin
+    - ~/.asdf
 
 - link:
     # Shells
@@ -34,8 +34,7 @@
     ~/.tmux.conf:
 
     # Vim
-    ~/.config/nvim: nvim/NvChad
-    ~/.config/nvim/lua/custom: nvim/custom
+    ~/.config/nvim: nvim
 
     # Tools
     ~/.config/k9s: k9s
