--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -95,9 +95,9 @@
         - latest
     - plugin: sops
       url: https://github.com/feniix/asdf-sops.git
-      default: latest
+      default: 3.9.4
       versions:
-        - latest
+        - 3.9.4
     - plugin: just
       url: https://github.com/olofvndrhr/asdf-just.git
       default: latest
@@ -123,6 +123,16 @@
       default: latest
       versions:
         - latest
+    - plugin: tilt
+      url: https://github.com/virtualstaticvoid/asdf-tilt.git
+      default: latest
+      versions:
+        - latest
+    - plugin: kind
+      url: https://github.com/reegnz/asdf-kind.git
+      default: v0.29.0
+      versions:
+        - v0.29.0
     - plugin: lua
       url: https://github.com/Stratus3D/asdf-lua.git
       default: latest
