Fix codecompanion config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -65,9 +65,9 @@
         - latest
     - plugin: golang
       url: https://github.com/kennyp/asdf-golang
-      default: 1.24.1
+      default: 1.24.4
       versions:
-        - 1.24.1
+        - 1.24.4
     - plugin: k9s
       url: https://github.com/looztra/asdf-k9s.git
       default: latest
@@ -184,6 +184,6 @@
     - command: uv python install --default --preview
       description: Install Python with UV
       quiet: true
-    - command: curl -fsSL https://github.com/block/goose/releases/download/v1.0.26/download_cli.sh | CONFIGURE=false bash
+    - command: curl -fsSL https://github.com/block/goose/releases/download/stable/download_cli.sh | CONFIGURE=false bash
       description: Install Goose CLI
       quiet: true
