--- a/goose/config.yaml
+++ b/goose/config.yaml
@@ -1,7 +1,7 @@
 GOOSE_MODE: auto
 GOOSE_CLI_MIN_PRIORITY: 0.0
 GOOSE_DISABLE_KEYRING: 1
-GOOSE_MODEL: o3-mini
+GOOSE_MODEL: claude-3.7-sonnet
 GOOSE_PLANNER_MODEL: gpt-4.1
 GOOSE_PROVIDER: github_copilot
 extensions:
