Add kustomize snippet

--- a/nvim/snippets/package.json
+++ b/nvim/snippets/package.json
@@ -5,7 +5,10 @@
       {
         "language": "all",
         "path": "./user-stories.json"
-      }
+      },
+      {
+        "language": "yaml",
+        "path": "./kube.yaml"
     ]
   }
 }
